SafkaOrchestrator migration to Netty. Added concurrency test